# training-bdd

./: .gitignore  .gitpod.yaml  README.md  behave.ini  pyproject.toml  run.sh  start.sh
features/: batch_infer.feature  environment.py  etl.feature  example.feature  realtime_infer.feature
features/steps/: __init__.py
src/: batch_infer.py  etl.py
src/example/: steps.py
tests/: __init__.py
tests/batch_infer/: sce_batch.py
tests/etl/: sce_1.py  sce_2.py  sce_etl.py
tests/example/: scenario_dummy.py  scenario_group_parameters.py  scenario_parameter.py
tests/realtime_infer/: sce_realtime.py
