[project]
name = "training-bdd"
version = "1.0.0"
description = "The repo is for Behaviour Driven Development(BDD) training."
authors = [
    {name = "Steve",email = "steve@email.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave (>=1.2.6,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "allure-behave (>=2.13.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.13"

